[package]
name = "weum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
salvo = {version = "0.92.0", features = ["serve-static", "anyhow", "rustls", "websocket", "force-https", "compression"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tracing = "*"
tracing-subscriber = "*"
notify-debouncer-full = "*"
zstd = { version = "*", features = ["zstdmt"] }
rand = { version = "*" }
rust_decimal = { version = "*", features = ["serde-float", "macros"] }
sthash = { git = "https://github.com/jedisct1/rust-sthash" }
redb = { version = "^4.1" }
# moka = { version = "0.12.15", features = ["future"] }
futures-util = "*"
rayon = { version = "*"}
fastembed = { version = "5", features = ["qwen3"] }
cudarc = { version = "*", features = ["cuda-12090"]}
candle-core = { version = "*", features = ["cudarc"] }
#zk-audio = { version = "0.1.0", features = ["native-capture"]}# wav_io = "0.1.17"
simsimd = "*"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
